5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4061/executions/1642_652.log
== TEST (2019-04-17 22:08:27) 
-- CODE:
n = int(input("digite numero: "))

if(100<n<999):
	mensagem = SIM
else:
	mensagem = NAO

print(mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    mensagem = SIM
NameError: name 'SIM' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 22:09:23) 
-- CODE:
n = int(input("digite numero: "))

if(100<n<999):

	mensagem = SIM
else:
	mensagem = NAO

print(mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    mensagem = SIM
NameError: name 'SIM' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-18 14:47:33) 
-- CODE:
n = int(input("digite numero: "))
formula = n%100

#if():
	#mensagem = SIM
#else:
	#mensagem = NAO

print(formula)
-- OUTPUT:
28
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-18 14:51:27) 
-- CODE:
n = int(input("digite numero: "))
resto = n%100
formula = n%resto

#if():
	#mensagem = SIM
#else:
	#mensagem = NAO

print(formula)
-- OUTPUT:
28
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-18 14:51:39) 
-- CODE:
n = int(input("digite numero: "))
resto = n%100
formula = n%resto

#if():
	#mensagem = SIM
#else:
	#mensagem = NAO

print(formula)
-- OUTPUT:
28
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-18 14:52:32) 
-- CODE:
n = int(input("digite numero: "))
resto = n%100
formula = n%resto

if(formula==0):
	mensagem = SIM
else:
	mensagem = NAO

print(mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    mensagem = SIM
NameError: name 'SIM' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-18 14:53:03) 
-- CODE:
n = int(input("digite numero: "))
resto = n%100
formula = n%resto

if(formula==0):
	mensagem = "SIM"
else:
	mensagem = "NAO"

print(mensagem)
-- OUTPUT:
SIM
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-18 14:53:13) 
-- CODE:
n = int(input("digite numero: "))
resto = n%100
formula = n%resto

if(formula==0):
	mensagem = "SIM"
else:
	mensagem = "NAO"

print(mensagem)
-- EXECUTION TIME:
0.1403
-- TEST CASE 1:
---- input:
728
---- correct output:
SIM
---- user output:
SIM
-- TEST CASE 2:
---- input:
789
---- correct output:
NAO
---- user output:
NAO
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
